--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "2.19.0",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-catch-links": "^2.1.25",
+    "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "2.2.37",
     "gatsby-plugin-offline": "3.0.32",
     "gatsby-plugin-postcss": "2.1.19",
