--- a/package.json
+++ b/package.json
@@ -1,81 +1,84 @@
 {
-  "name": "my-new-website",
-  "description": "Personal website & blog - Eliel Dabush",
-  "version": "3.0.141",
-  "author": "Eliel Dabush <eliel.dabush@gmail.com>",
-  "dependencies": {
-    "gatsby": "2.19.0",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-catch-links": "^2.1.25",
-    "gatsby-plugin-google-analytics": "^2.1.35",
-    "gatsby-plugin-manifest": "2.2.37",
-    "gatsby-plugin-offline": "3.0.32",
-    "gatsby-plugin-postcss": "2.1.19",
-    "gatsby-plugin-purgecss": "4.0.1",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.4",
-    "gatsby-source-filesystem": "^2.1.47",
-    "gatsby-transformer-remark": "^2.6.50",
-    "gatsby-transformer-sharp": "^2.3.13",
-    "graphql": "14.5.8",
-    "prop-types": "15.7.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-helmet": "5.2.1",
-    "react-icons": "^3.9.0",
-    "react-social-icons": "^4.1.0",
-    "react-star-ratings": "^2.3.0"
-  },
-  "keywords": [
-    "eliel",
-    "dabush",
-    "gatsby",
-    "tailwind",
-    "tailwindcss",
-    "purgecss"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "analyze:lint": "eslint --ext .jsx --ext .js .",
-    "analyze:prettier": "prettier --list-different '**/*.{js,css,md,json}'",
-    "analyze": "npm run analyze:lint && npm run analyze:prettier",
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
-    "fix:prettier": "prettier --write '**/*.{js,css,md,json}'",
-    "fix": "npm run fix:lint && npm run fix:prettier",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "deploy": "gatsby-plugin-s3 deploy",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@storybook/addon-actions": "^5.3.13",
-    "@storybook/addon-links": "^5.3.13",
-    "@storybook/addons": "^5.3.13",
-    "@storybook/react": "^5.3.13",
-    "@typescript-eslint/eslint-plugin": "2.17.0",
-    "@typescript-eslint/parser": "2.17.0",
-    "babel-eslint": "10.0.3",
-    "babel-loader": "^8.0.6",
-    "cssnano": "^4.1.10",
-    "eslint": "6.8.0",
-    "eslint-config-react-app": "5.1.0",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.18.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "gatsby-plugin-s3": "^0.3.2",
-    "prettier": "1.19.1",
-    "tailwindcss": "1.2.0",
-    "typescript": "3.7.5"
-  },
-  "repository": {
-    "type": "git"
-  },
-  "bugs": {}
+    "name": "my-new-website",
+    "description": "Personal website & blog - Eliel Dabush",
+    "version": "3.0.141",
+    "author": "Eliel Dabush <eliel.dabush@gmail.com>",
+    "dependencies": {
+        "gatsby": "2.20.24",
+        "gatsby-image": "^2.4.9",
+        "gatsby-plugin-catch-links": "^2.3.7",
+        "gatsby-plugin-google-analytics": "^2.3.6",
+        "gatsby-plugin-manifest": "^2.4.14",
+        "gatsby-plugin-offline": "^3.2.13",
+        "gatsby-plugin-postcss": "^2.3.6",
+        "gatsby-plugin-purgecss": "^5.0.0",
+        "gatsby-plugin-react-helmet": "^3.3.6",
+        "gatsby-plugin-sharp": "^2.6.14",
+        "gatsby-source-filesystem": "^2.3.14",
+        "gatsby-transformer-remark": "^2.8.19",
+        "gatsby-transformer-sharp": "^2.5.7",
+        "graphql": "^14.6.0",
+        "prop-types": "15.7.2",
+        "react": "16.12.0",
+        "react-dom": "16.12.0",
+        "react-helmet": "5.2.1",
+        "react-icons": "^3.9.0",
+        "react-social-icons": "^4.1.0",
+        "react-star-ratings": "^2.3.0"
+    },
+    "resolutions": {
+        "graphql": "^14.6.0"
+    },
+    "keywords": [
+        "eliel",
+        "dabush",
+        "gatsby",
+        "tailwind",
+        "tailwindcss",
+        "purgecss"
+    ],
+    "license": "MIT",
+    "scripts": {
+        "analyze:lint": "eslint --ext .jsx --ext .js .",
+        "analyze:prettier": "prettier --list-different '**/*.{js,css,md,json}'",
+        "analyze": "npm run analyze:lint && npm run analyze:prettier",
+        "build": "gatsby build",
+        "develop": "gatsby develop",
+        "fix:lint": "eslint --ext .jsx --ext .js . --fix",
+        "fix:prettier": "prettier --write '**/*.{js,css,md,json}'",
+        "fix": "npm run fix:lint && npm run fix:prettier",
+        "start": "npm run develop",
+        "serve": "gatsby serve",
+        "deploy": "gatsby-plugin-s3 deploy",
+        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.10.3",
+        "@storybook/addon-actions": "^5.3.13",
+        "@storybook/addon-links": "^5.3.13",
+        "@storybook/addons": "^5.3.13",
+        "@storybook/react": "^5.3.13",
+        "@typescript-eslint/eslint-plugin": "2.17.0",
+        "@typescript-eslint/parser": "2.17.0",
+        "babel-eslint": "10.0.3",
+        "babel-loader": "^8.0.6",
+        "cssnano": "^4.1.10",
+        "eslint": "6.8.0",
+        "eslint-config-react-app": "5.1.0",
+        "eslint-plugin-flowtype": "4.6.0",
+        "eslint-plugin-import": "2.20.0",
+        "eslint-plugin-jsx-a11y": "6.2.3",
+        "eslint-plugin-react": "7.18.0",
+        "eslint-plugin-react-hooks": "2.3.0",
+        "gatsby-plugin-s3": "^0.3.2",
+        "prettier": "1.19.1",
+        "tailwindcss": "1.2.0",
+        "typescript": "3.7.5"
+    },
+    "repository": {
+        "type": "git"
+    },
+    "bugs": {}
 }
