--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "version": "3.0.141",
     "author": "Eliel Dabush <eliel.dabush@gmail.com>",
     "dependencies": {
-        "gatsby": "2.20.24",
+        "gatsby": "^2.32.3",
         "gatsby-image": "^2.4.9",
         "gatsby-plugin-catch-links": "^2.3.7",
         "gatsby-plugin-google-analytics": "^2.3.6",
         "gatsby-plugin-manifest": "^2.4.14",
         "gatsby-plugin-offline": "^3.2.13",
-        "gatsby-plugin-postcss": "^2.3.6",
+        "gatsby-plugin-postcss": "^3.7.0",
         "gatsby-plugin-purgecss": "^5.0.0",
         "gatsby-plugin-react-helmet": "^3.3.6",
         "gatsby-plugin-sharp": "^2.6.14",
@@ -18,6 +18,7 @@
         "gatsby-transformer-remark": "^2.8.19",
         "gatsby-transformer-sharp": "^2.5.7",
         "graphql": "^14.6.0",
+        "postcss": "^8.2.6",
         "prop-types": "15.7.2",
         "react": "16.12.0",
         "react-dom": "16.12.0",
@@ -49,7 +50,6 @@
         "fix": "npm run fix:lint && npm run fix:prettier",
         "start": "npm run develop",
         "serve": "gatsby serve",
-        "deploy": "gatsby-plugin-s3 deploy",
         "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook"
@@ -72,9 +72,8 @@
         "eslint-plugin-jsx-a11y": "6.2.3",
         "eslint-plugin-react": "7.18.0",
         "eslint-plugin-react-hooks": "2.3.0",
-        "gatsby-plugin-s3": "^0.3.2",
         "prettier": "1.19.1",
-        "tailwindcss": "1.2.0",
+        "tailwindcss": "^2.0.3",
         "typescript": "3.7.5"
     },
     "repository": {
