--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "gatsby",
         "tailwind",
         "tailwindcss",
-        "purgecss"
+        "react",
+        "javascript"
     ],
     "license": "MIT",
     "scripts": {
@@ -50,16 +51,10 @@
         "fix": "npm run fix:lint && npm run fix:prettier",
         "start": "npm run develop",
         "serve": "gatsby serve",
-        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
-        "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
     },
     "devDependencies": {
         "@babel/core": "^7.10.3",
-        "@storybook/addon-actions": "^5.3.13",
-        "@storybook/addon-links": "^5.3.13",
-        "@storybook/addons": "^5.3.13",
-        "@storybook/react": "^5.3.13",
         "@typescript-eslint/eslint-plugin": "2.17.0",
         "@typescript-eslint/parser": "2.17.0",
         "babel-eslint": "10.0.3",
