set nodenv V. set yarn.lock. remove pack.lock

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "gatsby-transformer-remark": "^2.8.19",
         "gatsby-transformer-sharp": "^2.5.7",
         "graphql": "^14.6.0",
-        "postcss": "^8.2.6",
+        "postcss": "^8.4.5",
         "prop-types": "15.7.2",
         "react": "16.12.0",
         "react-dom": "16.12.0",
@@ -39,17 +39,17 @@
         "react",
         "javascript"
     ],
-    "license": "MIT",
+    "license": "",
     "scripts": {
         "analyze:lint": "eslint --ext .jsx --ext .js .",
         "analyze:prettier": "prettier --list-different '**/*.{js,css,md,json}'",
-        "analyze": "npm run analyze:lint && npm run analyze:prettier",
+        "analyze": "yarn analyze:lint && yarn analyze:prettier",
         "build": "gatsby build",
         "develop": "gatsby develop",
         "fix:lint": "eslint --ext .jsx --ext .js . --fix",
         "fix:prettier": "prettier --write '**/*.{js,css,md,json}'",
-        "fix": "npm run fix:lint && npm run fix:prettier",
-        "start": "npm run develop",
+        "fix": "yarn fix:lint && yarn fix:prettier",
+        "start": "yarn develop",
         "serve": "gatsby serve",
         "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
     },
