--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "gatsby-image": "^2.4.9",
         "gatsby-plugin-catch-links": "^2.3.7",
         "gatsby-plugin-google-analytics": "^2.3.6",
+        "gatsby-plugin-linkedin-insight": "^1.0.1",
         "gatsby-plugin-manifest": "^2.4.14",
         "gatsby-plugin-offline": "^3.2.13",
         "gatsby-plugin-postcss": "^3.7.0",
